; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_pcap-libdlpi.c_pcap_inject_libdlpi.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_pcap-libdlpi.c_pcap_inject_libdlpi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, %struct.pcap_dlpi* }
%struct.pcap_dlpi = type { i32 }

@DLPI_SUCCESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"dlpi_send\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*, i64)* @pcap_inject_libdlpi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcap_inject_libdlpi(%struct.TYPE_3__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.pcap_dlpi*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  %12 = load %struct.pcap_dlpi*, %struct.pcap_dlpi** %11, align 8
  store %struct.pcap_dlpi* %12, %struct.pcap_dlpi** %8, align 8
  %13 = load %struct.pcap_dlpi*, %struct.pcap_dlpi** %8, align 8
  %14 = getelementptr inbounds %struct.pcap_dlpi, %struct.pcap_dlpi* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i8*, i8** %6, align 8
  %17 = load i64, i64* %7, align 8
  %18 = call i32 @dlpi_send(i32 %15, i32* null, i32 0, i8* %16, i64 %17, i32* null)
  store i32 %18, i32* %9, align 4
  %19 = load i32, i32* %9, align 4
  %20 = load i32, i32* @DLPI_SUCCESS, align 4
  %21 = icmp ne i32 %19, %20
  br i1 %21, label %22, label %32

22:                                               ; preds = %3
  %23 = load %struct.pcap_dlpi*, %struct.pcap_dlpi** %8, align 8
  %24 = getelementptr inbounds %struct.pcap_dlpi, %struct.pcap_dlpi* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @dlpi_linkname(i32 %25)
  %27 = load i32, i32* %9, align 4
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = call i32 @pcap_libdlpi_err(i32 %26, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %27, i32 %30)
  store i32 -1, i32* %4, align 4
  br label %35

32:                                               ; preds = %3
  %33 = load i64, i64* %7, align 8
  %34 = trunc i64 %33 to i32
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %32, %22
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @dlpi_send(i32, i32*, i32, i8*, i64, i32*) #1

declare dso_local i32 @pcap_libdlpi_err(i32, i8*, i32, i32) #1

declare dso_local i32 @dlpi_linkname(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
